# hexagonal-chat-cleaner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  JenkinsFileStaging  Jenkinsfile  Makefile  README.md  docker-compose-dev.yml  docker-compose-portainer.yml  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  pytype.cfg  requirements-dev.txt  requirements.txt  startup.sh  tox.ini  unused_Dockerfile
.github/workflows/: hexagonal-chat-docker-image.yml
dockerfiles/: Dockerfile  Dockerfile_dev
src/chat-cleaner/: __init__.py
src/chatcleaner/: __init__.py
src/chatcleaner/adapters/db/: alembic.ini  orm.py
src/chatcleaner/adapters/db/migrations/: env.py
src/chatcleaner/adapters/db/migrations/versions/: d52b34be6459_.py
src/chatcleaner/adapters/entrypoints/api/: app.py  base.py
src/chatcleaner/adapters/entrypoints/api/v1/: route_cleaning.py  schemas_cleaning.py
src/chatcleaner/adapters/repositories/: cleaning.py
src/chatcleaner/adapters/services/: chat.py
src/chatcleaner/adapters/unit_of_works/: cleaning.py
src/chatcleaner/adapters/use_cases/: clean.py  cleaning.py
src/chatcleaner/configurator/: containers.py  settings.py
src/chatcleaner/domain/model/: model.py  schemas.py
src/chatcleaner/domain/ports/repositories/: cleaning.py
src/chatcleaner/domain/ports/services/: chat.py
src/chatcleaner/domain/ports/unit_of_works/: cleaning.py
src/chatcleaner/domain/ports/use_cases/: clean.py  cleaning.py
tests/: conftest.py  fake_container.py  fake_repository.py  fake_uow.py
tests/domain/: test_domain_models.py  test_services.py
tests/integrations/: test_api.py  test_cleaning_uow.py  test_cleaning_use_case.py
tests/repositories/: test_cleaning.py
tests/unit_of_works/: test_cleaning_uow.py
